{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 143,
  "lineage": "2000fde2-d746-4b36-cb85-2a38ed3407f3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "transit_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:118730128148:transit-gateway/tgw-0efa30e5625000884",
            "association_default_route_table_id": "tgw-rtb-0cda8f6d580902930",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "transit gateway for internet and workload VPCs",
            "dns_support": "enable",
            "id": "tgw-0efa30e5625000884",
            "multicast_support": "disable",
            "owner_id": "118730128148",
            "propagation_default_route_table_id": "tgw-rtb-0cda8f6d580902930",
            "security_group_referencing_support": "disable",
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "internet_vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:118730128148:transit-gateway-attachment/tgw-attach-0276082bed5834be2",
            "dns_support": "enable",
            "id": "tgw-attach-0276082bed5834be2",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0e3c607c2a3981fae"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0efa30e5625000884",
            "vpc_id": "vpc-0fd9f619e2b847f0c",
            "vpc_owner_id": "118730128148"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "module.internet_vpc.aws_subnet.private",
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "workload_vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:118730128148:transit-gateway-attachment/tgw-attach-0cba69a02582477d4",
            "dns_support": "enable",
            "id": "tgw-attach-0cba69a02582477d4",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-059cb95e04f442dce"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0efa30e5625000884",
            "vpc_id": "vpc-052590d7f00e3f881",
            "vpc_owner_id": "118730128148"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "module.workload_vpc.aws_subnet.private",
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internet_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:118730128148:loadbalancer/app/internet-vpc-alb/7acf7bca6ee8f1d8",
            "arn_suffix": "app/internet-vpc-alb/7acf7bca6ee8f1d8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internet-vpc-alb-1996582422.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:118730128148:loadbalancer/app/internet-vpc-alb/7acf7bca6ee8f1d8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "internet-vpc-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-082079320a454bab1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07f899ae8f05eeb34"
              },
              {
                "subnet_id": "subnet-0e8201ce015ed4976"
              }
            ],
            "subnets": [
              "subnet-07f899ae8f05eeb34",
              "subnet-0e8201ce015ed4976"
            ],
            "vpc_id": "vpc-0fd9f619e2b847f0c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_subnet.public",
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "workload_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:118730128148:loadbalancer/app/workload-vpc-alb/565497ec98550ba8",
            "arn_suffix": "app/workload-vpc-alb/565497ec98550ba8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-workload-vpc-alb-1568507544.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:118730128148:loadbalancer/app/workload-vpc-alb/565497ec98550ba8",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "workload-vpc-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0069888de41b3b641"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-052c177300b724337"
              },
              {
                "subnet_id": "subnet-0c6157f8c7bd4e8c1"
              }
            ],
            "subnets": [
              "subnet-052c177300b724337",
              "subnet-0c6157f8c7bd4e8c1"
            ],
            "vpc_id": "vpc-052590d7f00e3f881",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_subnet.intra",
            "module.workload_vpc.aws_subnet.private",
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "workload_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:118730128148:loadbalancer/net/workload-vpc-nlb/c860c049548d5e33",
            "arn_suffix": "net/workload-vpc-nlb/c860c049548d5e33",
            "dns_name": "workload-vpc-nlb-c860c049548d5e33.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:118730128148:loadbalancer/net/workload-vpc-nlb/c860c049548d5e33",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "workload-vpc-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c6157f8c7bd4e8c1"
              }
            ],
            "subnets": [
              "subnet-0c6157f8c7bd4e8c1"
            ],
            "vpc_id": "vpc-052590d7f00e3f881",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_subnet.private",
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"echoserver\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:subnet/subnet-052c177300b724337",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 250,
            "cidr_block": "10.1.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052c177300b724337",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118730128148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "workload-vpc-intra-us-east-1a"
            },
            "vpc_id": "vpc-052590d7f00e3f881"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"echoserver\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:security-group/sg-0c710fd55f20a719e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c710fd55f20a719e",
            "ingress": [],
            "name": "echoserver-20260310113131953400000002",
            "name_prefix": "echoserver-",
            "owner_id": "118730128148",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "echoserver"
            },
            "tags_all": {
              "Name": "echoserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-052590d7f00e3f881"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.module.service.data.aws_subnet.this",
            "module.workload_vpc.aws_subnet.intra",
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:network-acl/acl-005f621474846060e",
            "default_network_acl_id": "acl-005f621474846060e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-005f621474846060e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "118730128148",
            "subnet_ids": [
              "subnet-07f899ae8f05eeb34",
              "subnet-0e3c607c2a3981fae",
              "subnet-0e8201ce015ed4976"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "internet-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "internet-vpc-default"
            },
            "vpc_id": "vpc-0fd9f619e2b847f0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:route-table/rtb-0ba0748178f6164cb",
            "default_route_table_id": "rtb-0ba0748178f6164cb",
            "id": "rtb-0ba0748178f6164cb",
            "owner_id": "118730128148",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "internet-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "internet-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0fd9f619e2b847f0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:security-group/sg-082079320a454bab1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-082079320a454bab1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "118730128148",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "internet-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "internet-vpc-default"
            },
            "vpc_id": "vpc-0fd9f619e2b847f0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f56554e466d0f83a",
            "arn": "arn:aws:ec2:us-east-1:118730128148:elastic-ip/eipalloc-0f56554e466d0f83a",
            "association_id": "eipassoc-037c57c20cbba27ce",
            "domain": "vpc",
            "id": "eipalloc-0f56554e466d0f83a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a26a09e158f618d5",
            "private_dns": "ip-10-0-1-45.ec2.internal",
            "private_ip": "10.0.1.45",
            "public_dns": "ec2-98-87-139-22.compute-1.amazonaws.com",
            "public_ip": "98.87.139.22",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "internet-vpc-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "internet-vpc-us-east-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_internet_gateway.this",
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:internet-gateway/igw-03c0a3f5db2da9c52",
            "id": "igw-03c0a3f5db2da9c52",
            "owner_id": "118730128148",
            "tags": {
              "Environment": "dev",
              "Name": "internet-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "internet-vpc"
            },
            "vpc_id": "vpc-0fd9f619e2b847f0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f56554e466d0f83a",
            "association_id": "eipassoc-037c57c20cbba27ce",
            "connectivity_type": "public",
            "id": "nat-0ed096018b10a7e9c",
            "network_interface_id": "eni-0a26a09e158f618d5",
            "private_ip": "10.0.1.45",
            "public_ip": "98.87.139.22",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07f899ae8f05eeb34",
            "tags": {
              "Environment": "dev",
              "Name": "internet-vpc-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "internet-vpc-us-east-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_eip.nat",
            "module.internet_vpc.aws_internet_gateway.this",
            "module.internet_vpc.aws_subnet.public",
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eeed1b19bbcdf12b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ed096018b10a7e9c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eeed1b19bbcdf12b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_eip.nat",
            "module.internet_vpc.aws_internet_gateway.this",
            "module.internet_vpc.aws_nat_gateway.this",
            "module.internet_vpc.aws_route_table.private",
            "module.internet_vpc.aws_subnet.public",
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03c0a3f5db2da9c52",
            "id": "r-rtb-0334ab35e134ea7121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0334ab35e134ea712",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_internet_gateway.this",
            "module.internet_vpc.aws_route_table.public",
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:route-table/rtb-0eeed1b19bbcdf12b",
            "id": "rtb-0eeed1b19bbcdf12b",
            "owner_id": "118730128148",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ed096018b10a7e9c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "internet-vpc-private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "internet-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd9f619e2b847f0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:route-table/rtb-0334ab35e134ea712",
            "id": "rtb-0334ab35e134ea712",
            "owner_id": "118730128148",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c0a3f5db2da9c52",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "internet-vpc-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "internet-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd9f619e2b847f0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bdd653c0f2c131d",
            "route_table_id": "rtb-0eeed1b19bbcdf12b",
            "subnet_id": "subnet-0e3c607c2a3981fae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_route_table.private",
            "module.internet_vpc.aws_subnet.private",
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044fa6274e813c72e",
            "route_table_id": "rtb-0334ab35e134ea712",
            "subnet_id": "subnet-07f899ae8f05eeb34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_route_table.public",
            "module.internet_vpc.aws_subnet.public",
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a57d30943b5cf1d8",
            "route_table_id": "rtb-0334ab35e134ea712",
            "subnet_id": "subnet-0e8201ce015ed4976"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_route_table.public",
            "module.internet_vpc.aws_subnet.public",
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:subnet/subnet-0e3c607c2a3981fae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3c607c2a3981fae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118730128148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "internet-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "internet-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-0fd9f619e2b847f0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:subnet/subnet-07f899ae8f05eeb34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f899ae8f05eeb34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118730128148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "internet-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "internet-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0fd9f619e2b847f0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:subnet/subnet-0e8201ce015ed4976",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8201ce015ed4976",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118730128148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "internet-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "internet-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-0fd9f619e2b847f0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:vpc/vpc-0fd9f619e2b847f0c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-005f621474846060e",
            "default_route_table_id": "rtb-0ba0748178f6164cb",
            "default_security_group_id": "sg-082079320a454bab1",
            "dhcp_options_id": "dopt-014b5de99af5e7776",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fd9f619e2b847f0c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba0748178f6164cb",
            "owner_id": "118730128148",
            "tags": {
              "Environment": "dev",
              "Name": "internet-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "internet-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:network-acl/acl-015da81c0696adcea",
            "default_network_acl_id": "acl-015da81c0696adcea",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-015da81c0696adcea",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "118730128148",
            "subnet_ids": [
              "subnet-052c177300b724337",
              "subnet-059cb95e04f442dce",
              "subnet-0c3851c765f374b85",
              "subnet-0c6157f8c7bd4e8c1",
              "subnet-0ec80fbf707ad7f13"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "workload-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "workload-vpc-default"
            },
            "vpc_id": "vpc-052590d7f00e3f881"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:route-table/rtb-00e922b7c802c3d2b",
            "default_route_table_id": "rtb-00e922b7c802c3d2b",
            "id": "rtb-00e922b7c802c3d2b",
            "owner_id": "118730128148",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "workload-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "workload-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-052590d7f00e3f881"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:security-group/sg-0069888de41b3b641",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0069888de41b3b641",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "118730128148",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "workload-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "workload-vpc-default"
            },
            "vpc_id": "vpc-052590d7f00e3f881"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:route-table/rtb-01bad0e0092c005a8",
            "id": "rtb-01bad0e0092c005a8",
            "owner_id": "118730128148",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "workload-vpc-intra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "workload-vpc-intra"
            },
            "timeouts": null,
            "vpc_id": "vpc-052590d7f00e3f881"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:route-table/rtb-07cd1b550087f5d94",
            "id": "rtb-07cd1b550087f5d94",
            "owner_id": "118730128148",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "workload-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "workload-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-052590d7f00e3f881"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:route-table/rtb-09909e6a8a4f7c4ed",
            "id": "rtb-09909e6a8a4f7c4ed",
            "owner_id": "118730128148",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "workload-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "workload-vpc-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-052590d7f00e3f881"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d7e53133f9a33d3",
            "route_table_id": "rtb-07cd1b550087f5d94",
            "subnet_id": "subnet-0ec80fbf707ad7f13"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_route_table.database",
            "module.workload_vpc.aws_route_table.private",
            "module.workload_vpc.aws_subnet.database",
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f729c5baf6e6a923",
            "route_table_id": "rtb-09909e6a8a4f7c4ed",
            "subnet_id": "subnet-0c3851c765f374b85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_route_table.database",
            "module.workload_vpc.aws_route_table.private",
            "module.workload_vpc.aws_subnet.database",
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d3bec0243d0e475",
            "route_table_id": "rtb-01bad0e0092c005a8",
            "subnet_id": "subnet-052c177300b724337"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_route_table.intra",
            "module.workload_vpc.aws_subnet.intra",
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077c3a0cdd25ce8f1",
            "route_table_id": "rtb-07cd1b550087f5d94",
            "subnet_id": "subnet-059cb95e04f442dce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_route_table.private",
            "module.workload_vpc.aws_subnet.private",
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02998a77938b562ab",
            "route_table_id": "rtb-09909e6a8a4f7c4ed",
            "subnet_id": "subnet-0c6157f8c7bd4e8c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_route_table.private",
            "module.workload_vpc.aws_subnet.private",
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:subnet/subnet-0ec80fbf707ad7f13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec80fbf707ad7f13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118730128148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "workload-vpc-db-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "workload-vpc-db-us-east-1a"
            },
            "vpc_id": "vpc-052590d7f00e3f881"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:subnet/subnet-0c3851c765f374b85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3851c765f374b85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118730128148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "workload-vpc-db-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "workload-vpc-db-us-east-1b"
            },
            "vpc_id": "vpc-052590d7f00e3f881"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:subnet/subnet-052c177300b724337",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052c177300b724337",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118730128148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "workload-vpc-intra-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "workload-vpc-intra-us-east-1a"
            },
            "vpc_id": "vpc-052590d7f00e3f881"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:subnet/subnet-059cb95e04f442dce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059cb95e04f442dce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118730128148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "workload-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "workload-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-052590d7f00e3f881"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:subnet/subnet-0c6157f8c7bd4e8c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6157f8c7bd4e8c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118730128148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "workload-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "workload-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-052590d7f00e3f881"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:118730128148:vpc/vpc-052590d7f00e3f881",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-015da81c0696adcea",
            "default_route_table_id": "rtb-00e922b7c802c3d2b",
            "default_security_group_id": "sg-0069888de41b3b641",
            "dhcp_options_id": "dopt-014b5de99af5e7776",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-052590d7f00e3f881",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00e922b7c802c3d2b",
            "owner_id": "118730128148",
            "tags": {
              "Environment": "dev",
              "Name": "workload-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "workload-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}